--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -161,6 +161,7 @@ body{
     padding-top: 10px;
     position: absolute;
     bottom: 0;
+    font-size: 12px;
 }
 
 .projetos .projeto .informacoes-projeto{
