--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -33,10 +33,17 @@
 
     .home .informacoes p{
         font-size: 16px;
+        text-align: justify;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 
     .home .container-foto img {
         max-width: 320px;
+    }
+
+    .home .container-foto {
+        margin-left: 50px;
     }
 
     .projetos {
